Fix Java version compatibility